--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -160,7 +160,7 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
+       <!-- <android.support.v7.widget.CardView
             android:id="@+id/cardViewAli"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -176,7 +176,7 @@
             app:contentPaddingRight="8dp"
             app:contentPaddingTop="4dp">
 
-            <LinearLayout
+            &lt;!&ndash;<LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -200,8 +200,8 @@
                     android:paddingRight="8dp"
                     android:paddingTop="4dp"
                     android:text="点击领红包支持我\n原本懒得做这个功能，突然想到自己假期最后一天都花在这个App上面了就还是加吧……" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+            </LinearLayout>&ndash;&gt;
+        </android.support.v7.widget.CardView>-->
     </LinearLayout>
 
 
